--- a/odd/IPP-2025-1-lab-06-20227123-이선재.ipynb
+++ b/odd/IPP-2025-1-lab-06-20227123-이선재.ipynb
@@ -4339,7 +4339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -4353,7 +4353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
