14주차 과제 끝

--- a/IPP-2025-1-lab-10-20227123-이선재.ipynb
+++ b/IPP-2025-1-lab-10-20227123-이선재.ipynb
@@ -529,41 +529,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de413a11",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary>📝 질문과 답 1 (기초 구현)</summary>\n",
-    "\n",
-    "### 질문 \n",
-    "---\n",
-    "\n",
-    "\n",
-    "### 답변\n",
-    "---\n",
-    "\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary>📝 질문과 답 1 (기초 구현)</summary>\n",
-    "\n",
-    "### 질문 \n",
-    "---\n",
-    "\n",
-    "\n",
-    "### 답변\n",
-    "---\n",
-    "\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6cead247-a30f-4fa5-9442-6fbda016fe3f",
    "metadata": {
     "tags": []
@@ -700,6 +665,111 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5dcc7b0",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>📝 질문과 답 (K-means가 이미지 색상 축소(양자화)에 효과적인가?)</summary>\n",
+    "\n",
+    "### 질문 \n",
+    "---\n",
+    "이미지의 색상을 줄이는 데 왜 K-means가 적합한가요? 다른 방법과 비교했을 때 어떤 이점이 있나요?\n",
+    "\n",
+    "\n",
+    "### 답변\n",
+    "---\n",
+    "K-means는 다차원 공간(여기서는 RGB 색상 공간)에서 비슷한 색상들을 하나의 클러스터로 묶는 알고리즘입니다.\n",
+    "이미지에는 수만 가지 색상이 있을 수 있지만, 실제로는 시각적으로 유사한 색상들이 많습니다.\n",
+    "K-means는 그런 색상들을 효과적으로 묶고, 그 중심값을 대표 색으로 사용함으로써 시각적 품질을 크게 해치지 않으면서도 색상 수를 줄일 수 있습니다.\n",
+    "\n",
+    "✅ 대체 방법과 비교:\n",
+    "\n",
+    "단순 색상 양자화 (e.g., RGB를 64단계로 줄이기): 경계가 명확해져 품질이 떨어질 수 있음.\n",
+    "\n",
+    "Median Cut, Octree Quantization 등도 존재하지만, K-means는 유클리디안 거리 기반의 최적화된 색 분할을 제공한다는 점에서 강력합니다.`\n",
+    "\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bb4933f",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>📝 질문과 답 (왜 np.float32로 변환하나요?)</summary>\n",
+    "\n",
+    "### 질문 \n",
+    "---\n",
+    "왜 이미지 데이터를 float32로 바꾸는 게 중요할까요? 그냥 정수형으로 해도 되지 않나요?\n",
+    "\n",
+    "\n",
+    "### 답변\n",
+    "---\n",
+    "OpenCV의 cv2.kmeans()는 클러스터 중심 계산과 거리 계산을 부동소수점으로 수행해야 합니다.\n",
+    "정수형(uint8)으로 연산하면 거리 계산 정확도가 낮아지거나 오버플로우/언더플로우 문제가 발생할 수 있습니다.\n",
+    "\n",
+    "또한, cv2.kmeans()는 내부적으로 OpenCV의 C++ API를 호출하는데, 이 API는 float32 형식의 입력을 기대합니다.\n",
+    "정수형으로 제공할 경우 예외가 발생하거나 잘못된 결과를 낼 수 있습니다.\n",
+    "\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1312a5e7",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>📝 질문과 답 (왜 k-means의 결과가 항상 같지 않을 수 있나요?)</summary>\n",
+    "\n",
+    "### 질문 \n",
+    "---\n",
+    "같은 K 값으로 여러 번 실행했을 때 결과가 다를 수 있는데, 왜 그런가요?\n",
+    "\n",
+    "\n",
+    "### 답변\n",
+    "---\n",
+    "K-means는 랜덤 초기 중심점(random init) 으로 시작하므로, 서로 다른 결과가 나올 수 있습니다.\n",
+    "이를 보완하기 위해 attempts=10처럼 여러 번 초기화하고 그 중 최적의 결과를 선택하도록 설정합니다.\n",
+    "\n",
+    "➡️ K-means는 로컬 최적해(local minima)에 빠지기 쉬운 알고리즘입니다.\n",
+    "그래서 cv2.KMEANS_RANDOM_CENTERS는 결과 품질에 중요한 영향을 줍니다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1866241",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>📝 질문과 답 (색상 공간을 바꾸는 것이 성능에 어떤 영향을 줄 수 있을까?)</summary>\n",
+    "\n",
+    "### 질문 \n",
+    "---\n",
+    "RGB가 아닌 다른 색상 공간(HSV, Lab 등)을 사용하면 결과에 어떤 차이가 생길까요?\n",
+    "\n",
+    "\n",
+    "### 답변\n",
+    "---\n",
+    "RGB는 사람의 시각적 인식과는 달리 선형적인 색상 공간입니다.\n",
+    "즉, RGB에서의 거리 계산은 실제 색상 인식 차이와 다를 수 있습니다.\n",
+    "\n",
+    "CIELab 공간은 사람이 인식하는 색상 차이를 더 잘 반영합니다.\n",
+    "\n",
+    "HSV는 색조(Hue)와 채도(Saturation), 명도(Value)를 분리하여 조절이 쉬움.\n",
+    "\n",
+    "➡️ 색상 공간을 Lab으로 변환한 후 K-means를 적용하면 더 시각적으로 일관된 양자화 결과를 얻을 수 있습니다.\n",
+    "\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8640e788-5e7e-475c-bab3-8a6695d3d16a",
    "metadata": {
     "tags": []
@@ -719,23 +789,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "9c1043c1-4a4d-497e-8b28-9211eb6276cb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 51\u001b[0m\n\u001b[0;32m     48\u001b[0m     cv2\u001b[38;5;241m.\u001b[39mdestroyAllWindows()\n\u001b[0;32m     50\u001b[0m \u001b[38;5;66;03m# 실행\u001b[39;00m\n\u001b[1;32m---> 51\u001b[0m \u001b[43mrun_kmeans_with_trackbar\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[29], line 45\u001b[0m, in \u001b[0;36mrun_kmeans_with_trackbar\u001b[1;34m()\u001b[0m\n\u001b[0;32m     42\u001b[0m on_trackbar(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m---> 45\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwaitKey\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;241m&\u001b[39m \u001b[38;5;241m0xFF\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m27\u001b[39m:  \u001b[38;5;66;03m# ESC 키로 종료\u001b[39;00m\n\u001b[0;32m     46\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     48\u001b[0m cv2\u001b[38;5;241m.\u001b[39mdestroyAllWindows()\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -757,11 +814,13 @@
     "def on_trackbar(val):\n",
     "    global original_img\n",
     "\n",
-    "    # 트랙바 값에 +2 해서 실제 K 값으로 사용\n",
-    "    k = val + 2\n",
+    "    if val == 0:\n",
+    "        combined = np.hstack((original_img, original_img))\n",
+    "    else:\n",
+    "        k = val + 1  # val=1이면 k=2\n",
+    "        quantized_img = kmeans_color_quantization(original_img, k)\n",
+    "        combined = np.hstack((original_img, quantized_img))\n",
     "\n",
-    "    quantized_img = kmeans_color_quantization(original_img, k)\n",
-    "    combined = np.hstack((original_img, quantized_img))\n",
     "    cv2.imshow(\"KMeans Quantization\", combined)\n",
     "\n",
     "def run_kmeans_with_trackbar():\n",
@@ -772,22 +831,23 @@
     "        print(\"이미지를 불러올 수 없습니다.\")\n",
     "        return\n",
     "\n",
-    "    # 창 및 트랙바 생성\n",
-    "    cv2.namedWindow(\"KMeans Quantization\")\n",
-    "    cv2.createTrackbar(\"K (2~20)\", \"KMeans Quantization\", 0, 18, on_trackbar)\n",
-    "    # 0~18 이므로 실제 값은 2~20\n",
+    "    window_name = \"KMeans Quantization\"\n",
+    "    cv2.namedWindow(window_name)\n",
+    "    cv2.createTrackbar(\"K (0:원본, 1~18 → K=2~20)\", window_name, 0, 18, on_trackbar)\n",
     "\n",
-    "    # 초기 표시 (K=2)\n",
     "    on_trackbar(0)\n",
     "\n",
     "    while True:\n",
+    "        # 창이 닫혔는지 확인\n",
+    "        if cv2.getWindowProperty(window_name, cv2.WND_PROP_VISIBLE) < 1:\n",
+    "            break\n",
     "        if cv2.waitKey(1) & 0xFF == 27:  # ESC 키로 종료\n",
     "            break\n",
     "\n",
     "    cv2.destroyAllWindows()\n",
     "\n",
     "# 실행\n",
-    "run_kmeans_with_trackbar()"
+    "run_kmeans_with_trackbar()\n"
    ]
   },
   {
@@ -1004,36 +1064,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b39d1ae9",
+   "id": "bfa5aa9a",
    "metadata": {},
    "source": [
     "<details>\n",
-    "<summary>📝 질문과 답 1 (기초 구현)</summary>\n",
+    "<summary>📝 질문과 답 (왜 색상 양자화에 K-means 알고리즘이 적합한가요?)</summary>\n",
     "\n",
     "### 질문 \n",
     "---\n",
+    "이미지의 색상을 줄이려면 다른 방법도 있을 텐데, 왜 굳이 K-means를 사용하는 걸까요?\n",
     "\n",
     "\n",
     "### 답변\n",
     "---\n",
+    "이미지에는 수천~수만 가지 색상이 포함되지만, 많은 색상들이 서로 비슷합니다. K-means는 이런 비슷한 색들을 군집화(clustering) 하여 대표 색상 중심(centroid) 으로 묶어줍니다.\n",
     "\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a64d998c",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary>📝 질문과 답 1 (기초 구현)</summary>\n",
+    "이 방식은 다음과 같은 이점을 가집니다:\n",
     "\n",
-    "### 질문 \n",
-    "---\n",
+    "색상 수를 줄이면서도 시각적으로 유사한 품질을 유지\n",
     "\n",
+    "압축률 향상\n",
     "\n",
-    "### 답변\n",
-    "---\n",
+    "엣지 검출, 물체 분할 등 후속 처리 전 단계로 유용\n",
     "\n",
     "</details>"
    ]
