--- a/odd/IPP-2025-01-lab-09-20227123-이선재.ipynb
+++ b/odd/IPP-2025-01-lab-09-20227123-이선재.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "814e91c1",
    "metadata": {},
    "outputs": [],
@@ -2624,7 +2624,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2638,7 +2638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
