--- a/project_pre.ipynb
+++ b/project_pre.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "### 1. 필요한 패키지 설치\n",
     "```bash\n",
-    "pip install opencv-python PyQt5 numpy\n",
+    "pip install opencv-python PyQt5 numpy scikit-learn scipy pandas pillow\n",
     "```\n",
     "\n",
     "### 2. 모델 파일 다운로드\n",
@@ -40,7 +40,18 @@
     "\n",
     "<br><br><br><br><br><br>\n",
     "\n",
-    "<img src=\"image45.png\" alt=\"nn\" width=\"400\" height=\"300\">"
+    "<img src=\"image45.png\" alt=\"nn\" width=\"400\" height=\"300\">\n",
+    "\n",
+    "\n",
+    "<br><br><br><br><br><br>\n",
+    "\n",
+    "-  AI - OpenCV DNN: MobileNet SSD 모델\n",
+    "\n",
+    "- 20가지 객체 인식 (사람, 의자, 소파…)\n",
+    "\n",
+    "- 웹캠 동작 – Cv2 라이브러리\n",
+    "\n",
+    "- pyQt - GUI\n"
    ]
   },
   {
@@ -61,7 +72,8 @@
      "output_type": "stream",
      "text": [
       "모델 로딩 중...\n",
-      "모델 로딩 완료!\n"
+      "모델 로딩 완료!\n",
+      "웹캠을 열 수 없습니다.\n"
      ]
     },
     {
@@ -90,10 +102,21 @@
     "from PyQt5.QtWidgets import (\n",
     "    QApplication, QMainWindow, QLabel, QPushButton, QVBoxLayout, QHBoxLayout,\n",
     "    QWidget, QSlider, QMenuBar, QMenu, QAction, QFileDialog, QInputDialog,\n",
-    "    QTabWidget, QSpinBox, QDoubleSpinBox, QGroupBox, QGridLayout\n",
+    "    QTabWidget, QSpinBox, QDoubleSpinBox, QGroupBox, QGridLayout, QMessageBox\n",
     ")\n",
     "from PyQt5.QtCore import Qt, QTimer, QPoint\n",
     "from PyQt5.QtGui import QImage, QPixmap, QPainter, QPen, QFont, QColor\n",
+    "\n",
+    "# MNIST 관련 import 추가\n",
+    "try:\n",
+    "    from sklearn.neighbors import KNeighborsClassifier\n",
+    "    from sklearn.model_selection import train_test_split\n",
+    "    from scipy.io import arff\n",
+    "    import pandas as pd\n",
+    "    MNIST_AVAILABLE = True\n",
+    "except ImportError:\n",
+    "    MNIST_AVAILABLE = False\n",
+    "    print(\"MNIST 기능을 사용하려면 scikit-learn, scipy, pandas를 설치하세요.\")\n",
     "\n",
     "# 클래스 이름 리스트\n",
     "CLASSES = [\"background\", \"aeroplane\", \"bicycle\", \"bird\", \"boat\",\n",
@@ -121,6 +144,13 @@
     "        self.draw_mode = None\n",
     "        self.angle = 0\n",
     "        self.confidence_threshold = 0.5\n",
+    "\n",
+    "        # MNIST 관련 변수 추가\n",
+    "        self.knn_model = None\n",
+    "        self.mnist_loaded = False\n",
+    "        self.drawing_canvas = None\n",
+    "        self.drawing_mode = False\n",
+    "        self.drawing_thickness = 5\n",
     "\n",
     "        # UI 설정\n",
     "        self.setup_ui()\n",
@@ -280,9 +310,313 @@
     "        self.filter_layout.addLayout(filter_left, 2)\n",
     "        self.filter_layout.addLayout(filter_right, 1)\n",
     "\n",
+    "        # MNIST 숫자 인식 탭 추가\n",
+    "        self.mnist_tab = QWidget()\n",
+    "        self.mnist_layout = QHBoxLayout(self.mnist_tab)\n",
+    "        \n",
+    "        # 왼쪽 패널 (캔버스)\n",
+    "        mnist_left = QVBoxLayout()\n",
+    "        self.canvas_label = QLabel()\n",
+    "        self.canvas_label.setMinimumSize(280, 280)\n",
+    "        self.canvas_label.setMaximumSize(280, 280)\n",
+    "        self.canvas_label.setStyleSheet(\"border: 2px solid black; background-color: white;\")\n",
+    "        self.canvas_label.mousePressEvent = self.canvas_mouse_press\n",
+    "        self.canvas_label.mouseMoveEvent = self.canvas_mouse_move\n",
+    "        self.canvas_label.mouseReleaseEvent = self.canvas_mouse_release\n",
+    "        mnist_left.addWidget(self.canvas_label)\n",
+    "        \n",
+    "        # 캔버스 컨트롤 버튼\n",
+    "        canvas_controls = QHBoxLayout()\n",
+    "        self.clear_canvas_btn = QPushButton(\"지우기\")\n",
+    "        self.clear_canvas_btn.clicked.connect(self.clear_canvas)\n",
+    "        self.predict_btn = QPushButton(\"예측\")\n",
+    "        self.predict_btn.clicked.connect(self.predict_digit)\n",
+    "        canvas_controls.addWidget(self.clear_canvas_btn)\n",
+    "        canvas_controls.addWidget(self.predict_btn)\n",
+    "        mnist_left.addLayout(canvas_controls)\n",
+    "        \n",
+    "        # 선 굵기 슬라이더\n",
+    "        self.thickness_slider = QSlider(Qt.Horizontal)\n",
+    "        self.thickness_slider.setMinimum(1)\n",
+    "        self.thickness_slider.setMaximum(20)\n",
+    "        self.thickness_slider.setValue(5)\n",
+    "        self.thickness_slider.valueChanged.connect(self.update_thickness)\n",
+    "        mnist_left.addWidget(QLabel(\"선 굵기\"))\n",
+    "        mnist_left.addWidget(self.thickness_slider)\n",
+    "        \n",
+    "        # 오른쪽 패널 (MNIST 설정 및 결과)\n",
+    "        mnist_right = QVBoxLayout()\n",
+    "        \n",
+    "        # MNIST 모델 그룹\n",
+    "        mnist_group = QGroupBox(\"MNIST 모델\")\n",
+    "        mnist_settings = QVBoxLayout()\n",
+    "        \n",
+    "        self.load_mnist_btn = QPushButton(\"MNIST 데이터 로드 및 훈련\")\n",
+    "        self.load_mnist_btn.clicked.connect(self.load_and_train_mnist)\n",
+    "        mnist_settings.addWidget(self.load_mnist_btn)\n",
+    "        \n",
+    "        self.mnist_status = QLabel(\"MNIST 모델이 로드되지 않았습니다.\")\n",
+    "        mnist_settings.addWidget(self.mnist_status)\n",
+    "        \n",
+    "        mnist_group.setLayout(mnist_settings)\n",
+    "        mnist_right.addWidget(mnist_group)\n",
+    "        \n",
+    "        # 예측 결과 그룹\n",
+    "        result_group = QGroupBox(\"예측 결과\")\n",
+    "        result_layout = QVBoxLayout()\n",
+    "        self.prediction_result = QLabel(\"숫자를 그린 후 예측 버튼을 클릭하세요.\")\n",
+    "        self.prediction_result.setWordWrap(True)\n",
+    "        self.prediction_result.setAlignment(Qt.AlignCenter)\n",
+    "        \n",
+    "        # 폰트 설정\n",
+    "        font = QFont()\n",
+    "        font.setPointSize(14)\n",
+    "        font.setBold(True)\n",
+    "        self.prediction_result.setFont(font)\n",
+    "        \n",
+    "        # 스타일 설정\n",
+    "        self.prediction_result.setStyleSheet(\"\"\"\n",
+    "            QLabel {\n",
+    "                background-color: #f0f0f0;\n",
+    "                border: 2px solid #cccccc;\n",
+    "                border-radius: 10px;\n",
+    "                padding: 20px;\n",
+    "                margin: 10px;\n",
+    "            }\n",
+    "        \"\"\")\n",
+    "        \n",
+    "        result_layout.addWidget(self.prediction_result)\n",
+    "        result_group.setLayout(result_layout)\n",
+    "        mnist_right.addWidget(result_group)\n",
+    "        \n",
+    "        mnist_right.addStretch()\n",
+    "        \n",
+    "        # 레이아웃 결합\n",
+    "        self.mnist_layout.addLayout(mnist_left, 1)\n",
+    "        self.mnist_layout.addLayout(mnist_right, 1)\n",
+    "\n",
     "        # 탭 추가\n",
     "        self.tab_widget.addTab(self.detection_tab, \"객체 인식\")\n",
     "        self.tab_widget.addTab(self.filter_tab, \"이미지 필터링\")\n",
+    "        self.tab_widget.addTab(self.mnist_tab, \"MNIST 숫자 인식\")\n",
+    "        \n",
+    "        # 캔버스 초기화\n",
+    "        self.init_canvas()\n",
+    "\n",
+    "    def init_canvas(self):\n",
+    "        \"\"\"캔버스를 초기화합니다.\"\"\"\n",
+    "        self.drawing_canvas = np.zeros((280, 280, 3), dtype=np.uint8)\n",
+    "        self.drawing_canvas.fill(0)  # 검은색 배경\n",
+    "        self.update_canvas_display()\n",
+    "\n",
+    "    def update_canvas_display(self):\n",
+    "        \"\"\"캔버스를 화면에 표시합니다.\"\"\"\n",
+    "        if self.drawing_canvas is not None:\n",
+    "            h, w, ch = self.drawing_canvas.shape\n",
+    "            bytes_per_line = ch * w\n",
+    "            qt_image = QImage(self.drawing_canvas.data, w, h, bytes_per_line, QImage.Format_RGB888)\n",
+    "            self.canvas_label.setPixmap(QPixmap.fromImage(qt_image))\n",
+    "\n",
+    "    def canvas_mouse_press(self, event):\n",
+    "        \"\"\"캔버스에서 마우스 클릭 이벤트\"\"\"\n",
+    "        if event.button() == Qt.LeftButton:\n",
+    "            self.drawing_mode = True\n",
+    "            self.last_point = (event.x(), event.y())\n",
+    "\n",
+    "    def canvas_mouse_move(self, event):\n",
+    "        \"\"\"캔버스에서 마우스 이동 이벤트\"\"\"\n",
+    "        if self.drawing_mode and self.drawing_canvas is not None:\n",
+    "            current_point = (event.x(), event.y())\n",
+    "            cv2.line(self.drawing_canvas, self.last_point, current_point, (255, 255, 255), self.drawing_thickness)\n",
+    "            self.last_point = current_point\n",
+    "            self.update_canvas_display()\n",
+    "\n",
+    "    def canvas_mouse_release(self, event):\n",
+    "        \"\"\"캔버스에서 마우스 릴리즈 이벤트\"\"\"\n",
+    "        if event.button() == Qt.LeftButton:\n",
+    "            self.drawing_mode = False\n",
+    "\n",
+    "    def clear_canvas(self):\n",
+    "        \"\"\"캔버스를 지웁니다.\"\"\"\n",
+    "        self.init_canvas()\n",
+    "        self.prediction_result.setText(\"숫자를 그린 후 예측 버튼을 클릭하세요.\")\n",
+    "\n",
+    "    def update_thickness(self):\n",
+    "        \"\"\"선 굵기를 업데이트합니다.\"\"\"\n",
+    "        self.drawing_thickness = self.thickness_slider.value()\n",
+    "\n",
+    "    def load_and_train_mnist(self):\n",
+    "        \"\"\"MNIST 데이터를 로드하고 kNN 모델을 훈련합니다.\"\"\"\n",
+    "        if not MNIST_AVAILABLE:\n",
+    "            QMessageBox.warning(self, \"오류\", \"MNIST 기능을 사용하려면 scikit-learn, scipy, pandas를 설치하세요.\")\n",
+    "            return\n",
+    "            \n",
+    "        try:\n",
+    "            self.mnist_status.setText(\"MNIST 데이터를 로드하고 훈련 중...\")\n",
+    "            QApplication.processEvents()  # UI 업데이트\n",
+    "            \n",
+    "            # MNIST 데이터 로드\n",
+    "            data, meta = arff.loadarff('mnist_784.arff')\n",
+    "            df = pd.DataFrame(data)\n",
+    "            \n",
+    "            # 데이터 준비\n",
+    "            X = df.iloc[:, :-1].values  # 이미지 데이터 (784개 픽셀)\n",
+    "            y = df.iloc[:, -1].values   # 레이블 (0-9)\n",
+    "            \n",
+    "            # 레이블을 정수형으로 변환\n",
+    "            y = y.astype(int)\n",
+    "            \n",
+    "            # 데이터를 훈련/테스트로 분할\n",
+    "            X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "            \n",
+    "            # kNN 모델 생성 및 훈련 (12번 파일과 동일)\n",
+    "            self.knn_model = KNeighborsClassifier(n_neighbors=5)\n",
+    "            self.knn_model.fit(X_train, y_train)\n",
+    "            \n",
+    "            # 모델 성능 평가\n",
+    "            train_score = self.knn_model.score(X_train, y_train)\n",
+    "            test_score = self.knn_model.score(X_test, y_test)\n",
+    "            \n",
+    "            self.mnist_loaded = True\n",
+    "            self.mnist_status.setText(f\"훈련 완료! (훈련: {train_score:.3f}, 테스트: {test_score:.3f})\")\n",
+    "            \n",
+    "            QMessageBox.information(self, \"완료\", f\"MNIST 모델 훈련이 완료되었습니다!\\n훈련 정확도: {train_score:.3f}\\n테스트 정확도: {test_score:.3f}\")\n",
+    "            \n",
+    "        except FileNotFoundError:\n",
+    "            QMessageBox.warning(self, \"오류\", \"mnist_784.arff 파일을 찾을 수 없습니다.\\n파일이 현재 디렉토리에 있는지 확인하세요.\")\n",
+    "            self.mnist_status.setText(\"MNIST 데이터 파일을 찾을 수 없습니다.\")\n",
+    "        except Exception as e:\n",
+    "            QMessageBox.critical(self, \"오류\", f\"MNIST 데이터 로드 중 오류가 발생했습니다:\\n{str(e)}\")\n",
+    "            self.mnist_status.setText(\"MNIST 데이터 로드 실패\")\n",
+    "\n",
+    "    def preprocess_drawn_image(self, drawn_image):\n",
+    "        \"\"\"마우스로 그린 이미지를 MNIST 스타일로 전처리\"\"\"\n",
+    "        # 1. 그레이스케일 변환\n",
+    "        gray = cv2.cvtColor(drawn_image, cv2.COLOR_BGR2GRAY)\n",
+    "        \n",
+    "        # 2. 이진화 (임계값을 50으로 설정 - 12번 파일과 동일)\n",
+    "        _, binary = cv2.threshold(gray, 50, 255, cv2.THRESH_BINARY)\n",
+    "        \n",
+    "        # 3. 노이즈 제거\n",
+    "        kernel = np.ones((3,3), np.uint8)\n",
+    "        cleaned = cv2.morphologyEx(binary, cv2.MORPH_CLOSE, kernel)\n",
+    "        \n",
+    "        # 4. 28x28로 리사이즈\n",
+    "        resized = cv2.resize(cleaned, (28, 28))\n",
+    "        \n",
+    "        # 5. 중앙 정렬\n",
+    "        centered = self.center_digit(resized)\n",
+    "        \n",
+    "        return centered\n",
+    "\n",
+    "    def center_digit(self, image):\n",
+    "        \"\"\"숫자를 이미지 중앙에 정렬\"\"\"\n",
+    "        coords = cv2.findNonZero(image)\n",
+    "        if coords is not None and len(coords) > 0:\n",
+    "            x, y, w, h = cv2.boundingRect(coords)\n",
+    "            \n",
+    "            # 숫자가 너무 작으면 중앙 정렬하지 않음 (12번 파일과 동일)\n",
+    "            if w < 5 or h < 5:\n",
+    "                return image\n",
+    "            \n",
+    "            # 중앙 계산\n",
+    "            center_x = 14\n",
+    "            center_y = 14\n",
+    "            \n",
+    "            # 이동 거리 계산\n",
+    "            shift_x = center_x - (x + w // 2)\n",
+    "            shift_y = center_y - (y + h // 2)\n",
+    "            \n",
+    "            # 이동 행렬 생성\n",
+    "            M = np.float32([[1, 0, shift_x], [0, 1, shift_y]])\n",
+    "            centered = cv2.warpAffine(image, M, (28, 28))\n",
+    "            \n",
+    "            return centered\n",
+    "        return image\n",
+    "\n",
+    "    def predict_digit(self):\n",
+    "        \"\"\"그린 숫자를 예측합니다.\"\"\"\n",
+    "        if not self.mnist_loaded or self.knn_model is None:\n",
+    "            QMessageBox.warning(self, \"오류\", \"먼저 MNIST 모델을 로드하고 훈련하세요.\")\n",
+    "            return\n",
+    "            \n",
+    "        if self.drawing_canvas is None:\n",
+    "            QMessageBox.warning(self, \"오류\", \"캔버스가 초기화되지 않았습니다.\")\n",
+    "            return\n",
+    "            \n",
+    "        try:\n",
+    "            # 현재 캔버스에서 이미지 전처리\n",
+    "            processed = self.preprocess_drawn_image(self.drawing_canvas)\n",
+    "            \n",
+    "            # 전처리된 이미지를 1차원으로 변환\n",
+    "            flattened = processed.flatten()\n",
+    "            \n",
+    "            # kNN으로 예측\n",
+    "            prediction = self.knn_model.predict([flattened])[0]\n",
+    "            confidence = self.knn_model.predict_proba([flattened])[0]\n",
+    "            \n",
+    "            # 상위 3개 예측 결과 표시\n",
+    "            top_indices = np.argsort(confidence)[::-1][:3]\n",
+    "            \n",
+    "            # 결과 텍스트를 더 크고 명확하게 표시\n",
+    "            result_text = f\"🎯 예측 결과: {prediction}\\n\"\n",
+    "            result_text += f\"📊 신뢰도: {confidence[prediction]:.3f}\\n\\n\"\n",
+    "            result_text += \"🏆 상위 3개 예측:\\n\"\n",
+    "            for i, idx in enumerate(top_indices):\n",
+    "                result_text += f\"{i+1}. {idx}: {confidence[idx]:.3f}\\n\"\n",
+    "            \n",
+    "            self.prediction_result.setText(result_text)\n",
+    "            \n",
+    "            # 폰트 크기를 더 크게 설정\n",
+    "            font = QFont()\n",
+    "            font.setPointSize(16)\n",
+    "            font.setBold(True)\n",
+    "            self.prediction_result.setFont(font)\n",
+    "            \n",
+    "            # 예측 결과를 더 눈에 띄게 표시\n",
+    "            if confidence[prediction] > 0.7:\n",
+    "                self.prediction_result.setStyleSheet(\"\"\"\n",
+    "                    QLabel {\n",
+    "                        background-color: #d4edda;\n",
+    "                        border: 3px solid #28a745;\n",
+    "                        border-radius: 10px;\n",
+    "                        padding: 20px;\n",
+    "                        margin: 10px;\n",
+    "                        color: #155724;\n",
+    "                        font-weight: bold;\n",
+    "                    }\n",
+    "                \"\"\")\n",
+    "            elif confidence[prediction] > 0.4:\n",
+    "                self.prediction_result.setStyleSheet(\"\"\"\n",
+    "                    QLabel {\n",
+    "                        background-color: #fff3cd;\n",
+    "                        border: 3px solid #ffc107;\n",
+    "                        border-radius: 10px;\n",
+    "                        padding: 20px;\n",
+    "                        margin: 10px;\n",
+    "                        color: #856404;\n",
+    "                        font-weight: bold;\n",
+    "                    }\n",
+    "                \"\"\")\n",
+    "            else:\n",
+    "                self.prediction_result.setStyleSheet(\"\"\"\n",
+    "                    QLabel {\n",
+    "                        background-color: #f8d7da;\n",
+    "                        border: 3px solid #dc3545;\n",
+    "                        border-radius: 10px;\n",
+    "                        padding: 20px;\n",
+    "                        margin: 10px;\n",
+    "                        color: #721c24;\n",
+    "                        font-weight: bold;\n",
+    "                    }\n",
+    "                \"\"\")\n",
+    "            \n",
+    "            print(f\"예측 결과: {prediction}, 신뢰도: {confidence[prediction]:.3f}\")\n",
+    "            print(f\"상위 3개: {top_indices}, 신뢰도: {confidence[top_indices]}\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            QMessageBox.critical(self, \"오류\", f\"예측 중 오류가 발생했습니다:\\n{str(e)}\")\n",
+    "            print(f\"예측 오류: {e}\")\n",
     "\n",
     "    def create_menu_bar(self):\n",
     "        menubar = self.menuBar()\n",
