--- a/project_pre.ipynb
+++ b/project_pre.ipynb
@@ -21,7 +21,9 @@
     "### 2. 모델 파일 다운로드\n",
     "```bash\n",
     "python download_models.py\n",
-    "```"
+    "```\n",
+    "\n",
+    "### 3. mnist_784.arff 다운로드"
    ]
   },
   {
